2009-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	More efficient coercion.
	* src/algebra/multpoly.spad.pamphlet: New helper package.
	src/algebra/multpoly.spad.pamphlet: Use it.
	src/algebra/boo-pack2.input, 
	src/algebra/Makefile.in: Adjust.

2009-11-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/gaussian.spad.pamphlet: Make 'Complex(Integer)'
	into UniqueFactorizationDomain.

2009-11-26  Andrey Grozin <A.G.Grozin@inp.nsk.su>

	* src/algebra/files.spad.pamphlet: flush(): New function.

2009-11-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Make Lisp compiler less
	verbose.

2009-11-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/genups.spad.pamphlet,
	src/algebra/sttaylor.spad.pamphlet: More efficient
	power series multiplication.

2009-11-24  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mantepse.spad.pamphlet,
	src/algebra/rec.spad.pamphlet, 
	src/input/mantepse.input.pamphlet: rewrite RECOP to avoid
	unwanted coercion of initial values in guessHPaux

2009-11-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/boo-cat.input, src/interp/nlib.lisp,
	src/interp/patches.lisp, src/interp/property.lisp,
	src/interp/postpar.boot, src/interp/compiler.boot,
	src/interp/parse.boot: Misc cleanups.

2009-11-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp: interpsys-ecl-image-init():
	Set needed defaults for ECL.

2009-11-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/g-opt.boot,
	src/interp/int-top.boot, src/interp/i-spec2.boot,
	src/interp/setvart.boot, src/interp/slam.boot,
	src/interp/template.boot, src/interp/vmlisp.lisp:
	Misc cleanups.

2009-11-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sfsfun.boot, src/interp/nrunopt.boot,
	src/interp/property.lisp, src/interp/postpar.boot,
	src/interp/parse.boot, src/boot/typrops.boot,