@@ -78,13 +78,22 @@ FreeModuleCategory(R, S):Category == Exports where
           ++ \spad{monom(s,r)} returns the product of the basis element \spad{s} by the coefficient \spad{r}.
         coefficient :(%,S) -> R
           ++ \spad{coefficient(x,s)} returns the coefficient of the basis element s
-      -- attributs
+        -- attributs
         if R has CommutativeRing then
              Module(R)
              linearExtend:(S->R,%)->R
           ++ \spad{linearExtend:(f,x)} returns the linear extension
           ++ of a map defined on the basis applied to a linear combination
-
+        if R has Comparable then Comparable
+      add
+        if R has Comparable then
+          smaller?(p:%,q:%):Boolean ==
+            if leadingMonomial(p)=leadingMonomial(q) then
+              if leadingCoefficient(p)=leadingCoefficient(q) then
+                smaller?(reductum p, reductum q)
+              else
+                smaller?(leadingCoefficient(p),leadingCoefficient(q))
+            leadingMonomial(p)<leadingMonomial(q)
 
 @
 \section{domain FM FreeModule}
