@@ -1,3 +1,9 @@
+2009-11-28  Bill Page  <bill.page@newsynthesis.org>
+
+	* src/algebra/op.spad.pamphlet,
+	src/algebra/poly.spad.pamphlet, src/algebra/Makefile.in:
+	Add 'Comparable' to XPOLY and Tensor domains.
+
 2009-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	More efficient coercion.
